--- a/first.html
+++ b/first.html
@@ -65,7 +65,7 @@
 
     <div class="section left">
     <a href="homepage.html">
-      <img src="sell.jpg" alt="image" class="circle-img">
+       <h1>Give away section</h1>
        </a>
        <br>
        <br>
