--- a/second.html
+++ b/second.html
@@ -83,7 +83,8 @@
 
     .product-image {
       height: 150px;
-      background-color: #dfe6e3;
+      width: 100%;
+      object-fit: cover;
       border-radius: 8px;
       margin-bottom: 15px;
     }
@@ -108,7 +109,7 @@
         <option value="bags">Bags</option>
         <option value="rugs">Rugs</option>
         <option value="pillow">Pillow Covers</option>
-        <option value="bed">Bed Sheets</option>
+        <option value="bed">Curtains</option>
         <option value="sofa">Sofa Covers</option>
       </select>
     </div>
@@ -119,32 +120,32 @@
 
     <div class="product-grid">
       <div class="product-card">
-        <div class="product-image"></div>
+        <img class="product-image" src="clothes.jpg" alt="Clothes">
         <div class="product-title">Clothes</div>
       </div>
 
       <div class="product-card">
-        <div class="product-image"></div>
+        <img class="product-image" src="bags.jpg" alt="Bags">
         <div class="product-title">Bags</div>
       </div>
 
       <div class="product-card">
-        <div class="product-image"></div>
+        <img class="product-image" src="carpets.jpg" alt="Rugs">
         <div class="product-title">Rugs</div>
       </div>
 
       <div class="product-card">
-        <div class="product-image"></div>
+        <img class="product-image" src="pillows.jpg" alt="Pillow Covers">
         <div class="product-title">Pillow Covers</div>
       </div>
 
       <div class="product-card">
-        <div class="product-image"></div>
-        <div class="product-title">Bed Sheets</div>
+        <img class="product-image" src="curtains.jpg" alt="Curtains">
+        <div class="product-title">Curtains</div>
       </div>
 
       <div class="product-card">
-        <div class="product-image"></div>
+        <img class="product-image" src="sofa covers.jpg" alt="Sofa Covers">
         <div class="product-title">Sofa Covers</div>
       </div>
     </div>
